removed extra padding casuing a bug across the screen

--- a/css/app.css
+++ b/css/app.css
@@ -141,10 +141,9 @@ h5 {
 }
 .burgerMenu {
     cursor: pointer;
-    position: fixed;
+    position: absolute;
     top: 1em;
     left: 1em;
-    right: 0;
 }
 
 .burgerBar {
